2009-03-17 [colin]	3.7.1cvs18

	* src/msgcache.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_other.c
	* src/common/prefs.c
		Add preference for fsyncing metadata

2009-03-16 [paul]	3.7.1cvs17

	* src/prefs_customheader.c
		add forgotten #if HAVE_LIBCOMPFACE

2009-03-16 [paul]	3.7.1cvs16

	* src/prefs_customheader.c
		put the (X-)Face preview image below the up/down
		buttons so they don't jump around.
		make the list reorderable by drag'n'drop

2009-03-16 [colin]	3.7.1cvs15

	* src/prefs_customheader.c
		Add a (X-)Face preview. Patch by iwkse.

2009-03-16 [colin]	3.7.1cvs14

	* src/compose.c
	* src/folder.c
	* src/folder.h
	* src/msgcache.c
	* src/common/prefs.c
		Add fsync calls to make sure we don't
		lose data on system crashes. (to do:
		add a pref to allow people choosing raw
		speed)

2009-03-15 [colin]	3.7.1cvs13

	* src/gtk/gtkaspell.c
		Fix empty menu when there are no
		suggestions (using the Spelling menu)

2009-03-14 [colin]	3.7.1cvs12

	* src/common/utils.c
		Win32: fix subject prefix length

2009-03-11 [mones]	3.7.1cvs11

	* po/es.po
		fix encoding declared in header
		update translation now we're at it

2009-03-10 [colin]	3.7.1cvs10

	* src/messageview.c
		Fix "wrong mime" message printed out multiple
		times

2009-03-10 [colin]	3.7.1cvs9

	* src/prefs_folder_item.c
		Fix build

2009-03-09 [paul]	3.7.1cvs8

	* src/prefs_folder_item.c
	* src/send_message.c
		fixes to english text

2009-03-08 [paul]	3.7.1cvs7

	* po/ja.po
		correct errors in header

2009-03-08 [paul]	3.7.1cvs6

	* AUTHORS
	* configure.ac
	* po/ja.po
	* src/gtk/authors.h
	* tools/claws.i18n.status.pl
		add Japanese translation, submitted by kazken3

2009-03-07 [colin]	3.7.1cvs5

	* src/messageview.c
		Don't let the invalid MIME warning hide
		other noticeview (Partial receive or 
		return receipt).

2009-03-07 [colin]	3.7.1cvs4

	* src/procmime.c
		Fix build

2009-03-07 [colin]	3.7.1cvs3

	* src/messageview.c
	* src/procmime.c
	* src/procmime.h